fix footer logo size and brand spacing

--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -29,7 +29,7 @@
 .footer-logo {
   .footer-logo-img {
     height: auto;
-    width: 280px;
+    width: 180px;
     display: block;
   }
 }
